Import of ELIZABETH/load-0.04 from CPAN.
gitpan-cpan-distribution: load
gitpan-cpan-version:      0.04
gitpan-cpan-path:         ELIZABETH/load-0.04.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.04	21 October 2002
+	Fixed small problem when running with warnings and attempting to access
+	non-existing subroutine.  Spotted by Lars Fenneberg.
+
 0.03	1 October 2002
 	Changed using of lexical file handles to globs, to ensure compatibility
 	with earlier versions of Perl.
