--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,15 @@
+Sun Nov 24 20:09:26 2002
+------------------------
+
+version 0.02
+
+* add more examples to the description
+    (AUTRIJUS)
+
+* add a note about how the indirect object syntax doesn't work
+    (JAN DUBOIS)
+
+
 Sun Nov 24 13:47:11 2002
 ------------------------
 
