--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Sun Nov 24 22:51:03 2002
+------------------------
+
+version 0.03
+
+* actually put the changes in the tarball
+
+
 Sun Nov 24 20:09:26 2002
 ------------------------
 
