--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Use the <DATA> handle if there is one available.
 
 Use a source-filter to implement a ":ondemand" attribute.
+
+Add test-suite to check functioning with taint.
