--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.14	28 December 2003
+	Added automatic required modules update using Devel::Required.
+
 0.13	12 November 2003
 	Perl 5.8.2 does not handle empty subroutines (sub foo {}) very well.
 	In some cases, it degfaults.  This happened in the test-suite.
