--- a/README
+++ b/README
@@ -9,6 +9,9 @@ Copyright (c) 2002-2003 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
 reserved.  This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 
+Required Modules:
+ (none)
+
 The build is standard:
 
 perl Makefile.PL
