--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,25 @@
+0.15	14 March 2004
+	Added support for "ifdef.pm".  If ifdef.pm is loaded, then all eval's
+	will be done using the source filter provided by ifdef, possibly
+	activating code depending on environment variables being set.  Added
+	tests to check functionality when ifdef.pm is loaded.
+
+	Fixed some possible minor problems with localizing $_: it appears a
+	simple "local $_" is not enough, instead a "local $_ = \my $foo" seems
+	to be the canonical solution to this problem as of now according to
+	p5p.
+
+	28 January 2004
+	Made sure the test-suite cleans up on multi-versioned systems.
+
 0.14	28 December 2003
 	Added automatic required modules update using Devel::Required.
 
 0.13	12 November 2003
 	Perl 5.8.2 does not handle empty subroutines (sub foo {}) very well.
-	In some cases, it degfaults.  This happened in the test-suite.
+	In some cases, it segfaults.  This happened in the test-suite.
 	Test-suite has been adapted (that really is the only change, apart
-	from the version).
+	from the version number).
 
 0.12	29 September 2003
 	Added support for register additional "use" modules for specific
