--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@ Use the <DATA> handle if there is one available.
 
 Use a source-filter to implement a ":ondemand" attribute.
 
-Add test-suite to check functioning with taint.
+Add more testing for interaction with "ifdef.pm".
