Import of ELIZABETH/load-0.18 from CPAN.
gitpan-cpan-distribution: load
gitpan-cpan-version:      0.18
gitpan-cpan-path:         ELIZABETH/load-0.18.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.18	18 October 2005
+	Added fix for missing Kwalitee point for not using 'strict'
+
 0.17	9 July 2005
 	Finished AutoLoader emulation mode and adapted testing accordingly.
 	Fixed some test problems if ifdef.pm is not installed.  Changes tests
