--- a/README
+++ b/README
@@ -5,14 +5,15 @@ It is primarily intended as a memory saving action, specifically for threaded
 Perl and mod_perl applications, but maybe useful in more traditional Perl
 applications as well.
 
-Copyright (c) 2002-2004 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
+Copyright (c) 2002-2007 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
 reserved.  This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 
+Version:
+ 0.19
+
 Required Modules:
  (none)
-
-The build is standard:
 
 perl Makefile.PL
 make
