--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.21	31 March 2012
+	Fixed some pod issues.  Brought code in line with current esthetics.
+	Changed internal storage from packed L3 to packed w3 format, for
+	hopefully smaller memory footprint.
+
 0.20	20 September 2010
 	Fixed problem that started to manifest itself with a slightly different
 	handling of localized $@, starting in perl 5.13.x.
